# doc-bases

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  INSTALLATION.md  MODERNIZATION_PLAN.md  QUICK_START.md  README.md  SECURITY_PATCHES.md  TODO.md  agent-instructions-ollama.md  agent-instructions.md  docb  google-env  ollama-env  openai-env  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  research.md  run.py
.docbases/: config.yaml
.github/workflows/: ci.yml  test.yml
.specify/memory/: constitution.md
docs/: API.md  ARCHITECTURE.md  CLI_USAGE.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURES.md  OLLAMA_SETUP.md
src/: README.md  main.py  requirements.txt
src/agents/: __init__.py  critic_agent.py  retriever_agent.py  summarizer_agent.py  supervisor.py
src/checkpointing/: __init__.py  sqlite_saver.py
src/cli/: __init__.py  config_manager.py  main.py  utils.py
src/cli/commands/: __init__.py  config.py  health.py  kb.py  query.py  setup.py  test.py
src/evaluation/: __init__.py  rag_evaluator.py
src/github_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/graphs/: __init__.py  adaptive_rag.py  corrective_rag.py
src/models/: embeddings.py  llm.py  reranker.py
src/observability/: __init__.py  langsmith_tracer.py  metrics.py
src/retrieval/: __init__.py  bm25_index.py  hybrid_retriever.py  rrf_fusion.py
src/tools/: __init__.py  web_search.py
src/utils/: docling_loader.py  document_loader.py  github_utils.py  kb_metadata.py  logger.py  rag_utils.py  semantic_splitter.py  utilities.py
tests/: test_adaptive_rag.py  test_corrective_rag.py  test_docling_integration.py  test_document_loader.py  test_embeddings.py  test_github_utils.py  test_kb_metadata.py  test_kb_metadata_e2e.py  test_llm.py  test_logger.py  test_multi_agent.py  test_rag_e2e.py  test_rag_utils.py  test_sqlite_checkpointer.py  test_utilities.py
tests/retrieval/: test_bm25_index.py  test_hybrid_e2e.py  test_hybrid_retriever.py  test_reranker.py  test_rrf_fusion.py
